miqui/modules/admin_node/files/etc/sysconfig/iptables
# Generated by iptables-save v1.4.7
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.1.0/24   -i eth0 -p udp -m state --state NEW -m udp --dport   69 -j ACCEPT
-A INPUT -s 192.168.1.0/24   -i eth0 -p tcp -m state --state NEW -m tcp --dport   81 -j ACCEPT
-A INPUT -s 192.168.1.0/24   -i eth0 -p udp -m state --state NEW -m udp --dport  123 -j ACCEPT
-A INPUT -s 192.168.1.0/24   -i eth0 -p tcp -m state --state NEW -m tcp --dport 9418 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport   22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport   80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.1.0/24   -i eth0 -m state --state NEW -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed
# Generated by iptables-save v1.4.7
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed
